--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-nft-contracts/hardhat/*
+artifacts
+cache
+scripts
+test
+hardhat.config.js
+package-lock.json
+package.json
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+yarn.lock
